--- a/client/components/card.scss
+++ b/client/components/card.scss
@@ -3,7 +3,7 @@
 .card {
   width: 400px;
   // height: fit-content;
-  height: 350px;
+  height: 375px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,7 +28,7 @@
 .posted-img {
   // border: 2px solid red;
   // height: auto;
-  // object-fit: contain;
+  object-fit: contain;
   max-width: 100%;
   height: auto;
   // display: none;
