--- a/client/components/card.scss
+++ b/client/components/card.scss
@@ -13,7 +13,7 @@
   box-shadow: $shadow-3;
   //   margin: 1rem;
   padding: 1rem;
-  background-color: $primary-500;
+  background-color: #ffec99;
   border-radius: 0.5rem;
 }
 
@@ -42,7 +42,8 @@
   display: flex;
   flex-direction: column;
   //   color: $grey-800;
-  color: $white;
+  color: $grey-800; 
+
 
   h5 {
     margin: 0;
