--- a/client/components/header.scss
+++ b/client/components/header.scss
@@ -4,13 +4,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: $primary-500;
+  background-color: #ffec99;
   align-items: center;
   padding: 1rem;
   border-radius: 0.5rem;
 
   h3 {
-    color: $white;
+    color: $grey-800;
     margin: 0;
   }
 }
@@ -27,20 +27,30 @@
   height: 50px;
   border-radius: 50%;
   background-color: $grey-600;
+  cursor: pointer;
+  display: flex; 
+  justify-content: center;
+  align-items:center;
+  font-size: 12px; 
+  color: #ffec99; 
 }
+
+.profile-pic-plain-color:hover {
+  background-color: rgb(8, 172, 172);
+} 
 
 .account-name-container {
   //   height: 100px;
 
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-right: 32px; 
 }
 
 .account-name {
   margin: 0;
-  color: $white;
+  color: $grey-800;
 }
 
 .nav-btn-container {
